# socket_data

./: CMakeLists.txt  README.md  lms_package.json  loadConfig.xml
configs/: socket_data_receiver.lconf  socket_data_sender.lconf
include/socket_data/: message_types.h
receiver/: CMakeLists.txt
receiver/include/socket_data_receiver/: receiver.h
receiver/src/: interface.cpp  receiver.cpp
sender/: CMakeLists.txt
sender/include/socket_data_sender/: sender.h
sender/src/: interface.cpp  sender.cpp
